--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -185,6 +185,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\ProtectedController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -329,6 +330,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Protected\AddClient.cshtml" />
     <Content Include="Views\Protected\Index.cshtml" />
+    <Content Include="Views\File\FileUpload.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
