--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ EasyBank/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 EasyBank.v12.suo
 EasyBank.v12.suo
 EasyBank.v12.suo*.suo
+*.Cache
