--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -196,6 +196,10 @@
     <Compile Include="Migrations\201407160910318_first.Designer.cs">
       <DependentUpon>201407160910318_first.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201407180802574_ErrorMessagesAdded.cs" />
+    <Compile Include="Migrations\201407180802574_ErrorMessagesAdded.Designer.cs">
+      <DependentUpon>201407180802574_ErrorMessagesAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountModels.cs" />
@@ -206,6 +210,16 @@
     <Compile Include="Models\Currency.cs" />
     <Compile Include="Models\CurrencyOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Resources\Resource.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Resources</CustomToolNamespace>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\EasyBank.mdf" />
@@ -341,6 +355,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201407160910318_first.resx">
       <DependentUpon>201407160910318_first.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407180802574_ErrorMessagesAdded.resx">
+      <DependentUpon>201407180802574_ErrorMessagesAdded.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
