Edited names of dropdownlists. Everything is ok:)

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ EasyBank.v12.suo*.suo
 EasyBank/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 EasyBank/obj/Debug/EasyBank.csproj.GenerateResource.Cache
 EasyBank/obj/Debug/EasyBank.csprojResolveAssemblyReference.cache
+EasyBank.v12.suo
+EasyBank.v12.suo
