--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -195,9 +195,11 @@
     <Compile Include="Controllers\OperationController.cs" />
     <Compile Include="Controllers\ProtectedController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\HistoryManager.cs" />
     <Compile Include="DAL\ImageType.cs" />
     <Compile Include="Filters\CultureAttribute.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
+    <Compile Include="DAL\OperationService.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -273,6 +275,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Resources</CustomToolNamespace>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -410,6 +413,7 @@
     <Content Include="Views\Protected\AddPhoto.cshtml" />
     <Content Include="Views\Protected\ShowPassport.cshtml" />
     <Content Include="Views\Protected\ShowClientPhoto.cshtml" />
+    <Content Include="Views\Operation\AddMoney.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
