--- a/EasyBank/Web.config
+++ b/EasyBank/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-EasyBank-20140714160118;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-EasyBank-20140714160118.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SimpleMembership;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\SimpleMembership.mdf" providerName="System.Data.SqlClient" />
     <add name="ConnectionContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-EasyBank-20140714160118;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\EasyBank.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
