--- a/EasyBank/Views/Web.config
+++ b/EasyBank/Views/Web.config
@@ -30,7 +30,7 @@
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
     </httpHandlers>
 
-    <globalization uiCulture="auto" culture="auto" />
+    <globalization uiCulture="en-GB" culture="en-GB" />
 
     <!--
         Enabling request validation in view pages would cause validation to occur
