--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -235,6 +235,10 @@
     <Compile Include="Migrations\201407251231098_AddedOperator.Designer.cs">
       <DependentUpon>201407251231098_AddedOperator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201407281001042_OperatorModelUpdate.cs" />
+    <Compile Include="Migrations\201407281001042_OperatorModelUpdate.Designer.cs">
+      <DependentUpon>201407281001042_OperatorModelUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountModels.cs" />
@@ -283,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201407251231098_AddedOperator.resx">
       <DependentUpon>201407251231098_AddedOperator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201407281001042_OperatorModelUpdate.resx">
+      <DependentUpon>201407281001042_OperatorModelUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resource.uk-UA.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -448,11 +455,11 @@
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
     <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
-    <Content Include="Views\Protected\PreRegister.cshtml" />
     <Content Include="Views\Protected\CurrencyList.cshtml" />
     <Content Include="Views\Protected\verifyDelete.cshtml" />
     <Content Include="Views\Account\RegisterAdmin.cshtml" />
     <Content Include="Views\Account\RegisterOperator.cshtml" />
+    <Content Include="Views\Protected\OperatorsList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
