Depo and Credit finished

--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -511,6 +511,8 @@
     <Content Include="Views\Error\OperationError.cshtml" />
     <Content Include="Views\Operation\WidthdrawMoney.cshtml" />
     <Content Include="Views\Office\AddDepositCredit.cshtml" />
+    <Content Include="Views\Office\DepositList.cshtml" />
+    <Content Include="Views\Office\CreditList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
