--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -511,6 +511,7 @@
     <Content Include="Views\Error\OperationError.cshtml" />
     <Content Include="Views\Operation\WidthdrawMoney.cshtml" />
     <Content Include="Views\Office\AddDepositCredit.cshtml" />
+    <Content Include="Views\Operation\TransferMoney.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
