--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -514,6 +514,8 @@
     <Content Include="Views\Operation\TransferMoney.cshtml" />
     <Content Include="Views\Office\DepositList.cshtml" />
     <Content Include="Views\Office\CreditList.cshtml" />
+    <Content Include="Views\Account\ClientsProfile.cshtml" />
+    <Content Include="Views\Account\ShowClientPhoto.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
