--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -194,6 +194,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="BAL\StatisticService.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\OfficeController.cs" />
@@ -296,6 +297,7 @@
     <Compile Include="Models\ProfitCalc.cs" />
     <Compile Include="Models\RegisterCompositeModel.cs" />
     <Compile Include="Models\TotalAmountForCurrency.cs" />
+    <Compile Include="Models\VirtualAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk-UA.Designer.cs">
       <DependentUpon>Resource.uk-UA.resx</DependentUpon>
@@ -383,6 +385,13 @@
       <DependentUpon>EasyBank.mdf</DependentUpon>
     </Content>
     <Content Include="bin\CaptchaMvc.dll" />
+    <Content Include="Content\images\back_2436.ico" />
+    <Content Include="Content\images\kopeteavailable_4552.ico" />
+    <Content Include="Content\images\misc_26_6816.ico" />
+    <Content Include="Content\images\money_add_3612.ico" />
+    <Content Include="Content\images\money_delete_2216.ico" />
+    <Content Include="Content\images\redo_7625.ico" />
+    <Content Include="Content\images\refresh_2156.ico" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Style.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -559,6 +568,11 @@
     <Content Include="Views\Operation\TotalCreditInterests.cshtml" />
     <Content Include="Views\Account\CreditList.cshtml" />
     <Content Include="Views\Account\DepositList.cshtml" />
+    <Content Include="Views\Protected\AccountHistory.cshtml" />
+    <Content Include="Views\Operation\ProfitPlanningCalc.cshtml" />
+    <Content Include="Views\Operation\TotalPlannedDepositInterests.cshtml" />
+    <Content Include="Views\Operation\ProfitPlanningCalcResults.cshtml" />
+    <Content Include="Views\Operation\ProfitPlanningCalcView.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
