Added bank account display

--- a/EasyBank/EasyBank.csproj
+++ b/EasyBank/EasyBank.csproj
@@ -578,6 +578,9 @@
     <Content Include="Views\Account\RegisterAdmin.cshtml" />
     <Content Include="Views\Account\RegisterOperator.cshtml" />
     <Content Include="Views\Account\LoginWithCapcha.cshtml" />
+    <Content Include="Views\Protected\AddDepositAccount.cshtml" />
+    <Content Include="Views\Protected\AddCreditAccount.cshtml" />
+    <Content Include="Views\Office\BankAccounts.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
